--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>assets/images/netflix.ico">
+    <link rel="stylesheet" href="<%= BASE_URL %>assets/css/fonts.css">
     <link rel="stylesheet" href="<%= BASE_URL %>assets/css/main.css">
     <link rel="stylesheet" href="<%= BASE_URL %>assets/css/custom.css">
     <title>Home - Netflix</title>
